--- a/zoom_layout.html
+++ b/zoom_layout.html
@@ -43,6 +43,10 @@
             margin-right: 10px;
             font-weight: bold;
         }
+        span > img {
+            height: 10px;
+            filter: invert(1);
+        }
     </style>
     <title>Zoom Layout</title>
 </head>
@@ -54,87 +58,87 @@
         </ul>
         <div class="layout">
             <div class="box">
-                <p>Name</p>
+                <p>Nagarjun A</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Nagarjun A</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>V Advaith</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>V Advaith</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>E Madhu</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>E Madhu</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Komal Akash</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Komal Akash</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Navyasri</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Navyasri</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Meghana</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Meghana</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Priya</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Priya</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Rahul</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Rahul</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Pawan</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Pawan</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Raju</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Raju</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Ramesh</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Ramesh</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Seetha</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Seetha</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Kalyan</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Kalyan</span>
                 </div>
             </div>
             <div class="box">
-                <p>Name</p>
+                <p>Venkatesh</p>
                 <div class="footer">
-                    <span>mic</span><span>Name</span>
+                    <span><img src="./Media/mute.png" alt="mute"></span><span>Venkatesh</span>
                 </div>
             </div>
         </div>
