--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="./target.html">Target</a>
             </li>
             <li>
-                <a href="./traffic.html">Traffic</a>
+                <a href="./traffic.html">Traffic Signel</a>
             </li>
             <li>
                 <a href="./zoom_layout.html">zoom layout</a>
