--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="./traffic.html">Traffic Signel</a>
             </li>
             <li>
-                <a href="./zoom_layout.html">zoom layout</a>
+                <a href="./zoom_layout.html">Zoom Users Layout</a>
             </li>
         </ul>
     </div>
