--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <li>
                 <a href="./zoom_layout.html">Zoom Users Layout</a>
             </li>
+            <li>
+                <a href="./dashboard/index.html">Dashboard</a>
+            </li>
         </ul>
     </div>
 </body>
