--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <li>
                 <a href="./dashboard/index.html">Dashboard</a>
             </li>
+            <li>
+                <a href="./chess.html">Chess Board</a>
+            </li>
         </ul>
     </div>
 </body>
