--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <a href="./traffic.html">Traffic Signel</a>
             </li>
             <li>
-                <a href="./zoom_layout.html">Zoom Users Layout</a>
-            </li>
-            <li>
-                <a href="./dashboard/index.html">Dashboard</a>
+                <a href="./zoom_layout.html">zoom layout</a>
             </li>
             <li>
                 <a href="./chess.html">Chess Board</a>
+            </li>
+            <li>
+                <a href="./calc.html">Calculator GUI</a>
             </li>
         </ul>
     </div>
